[CHORE] Fix article alignment

--- a/app/styles/articles.scss
+++ b/app/styles/articles.scss
@@ -3,7 +3,7 @@
 .article-item {
   display: flex;
   cursor: pointer;
-  align-items: flex-start; /* Adjust alignment if needed */
+  align-items: flex-start;
   margin-bottom: 20px;
   @include transition(.5s);
   &:hover{
@@ -12,13 +12,13 @@
 	}
 
 
-  border: 1px solid $article-outline; // This sets a light grey border
-  padding: 10px; // Optional, to add some space inside the border
-  margin: 20px; // Optional, to add some space outside the border
+  border: 1px solid $article-outline;
+  padding: 20px;
+  margin: 20px;
   box-shadow: 0px 0px 5px $article-outline;
 }
 .article-item img {
-  width: 150px; /* Adjust size as needed */
+  width: 150px;
   height: 100px;
   object-fit: cover;
   margin-right: 20px;
@@ -51,7 +51,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 200px;  /* Adjust height as necessary */
+  height: 200px;
   font-size: 20px;
   color: #666;
 }
@@ -70,4 +70,7 @@
 }
 .article-title, .article-main-desc {
   padding-bottom: 10px;
+}
+.article-content {
+  padding-top: 10px;
 }
